# customEngine

./: .gitignore  README.md
GameFirst/: CMakeLists.txt  imgui.ini
GameFirst/.run/: Ship.run.xml  UnitTest.run.xml
GameFirst/Assets/Anims/: ThirdPersonIdle.itpanim2  ThirdPersonJump_End.itpanim2  ThirdPersonJump_Loop.itpanim2  ThirdPersonJump_Start.itpanim2  ThirdPersonRun.itpanim2  ThirdPersonWalk.itpanim2
GameFirst/Assets/Levels/: Level06.itplevel  Level07.itplevel  Level08.itplevel  Level09.itplevel  Level10.itplevel  Level11.itplevel  Level_AimTrainer.itplevel
GameFirst/Assets/Materials/: LightSphere.itpmat  PlayerShip.itpmat  SK_Mannequin.itpmat
GameFirst/Engine/: Actor.cpp  Actor.h  Animation.cpp  Animation.h  AssetCache.h  AssetManager.cpp  AssetManager.h  BoneTransform.cpp  BoneTransform.h  CMakeLists.txt  Camera.cpp  Camera.h  Character.cpp  Character.h  CollisionBox.cpp  CollisionBox.h  Component.cpp  Component.h  DbgAssert.cpp  DbgAssert.h  EngineMath.cpp  EngineMath.h  EngineMath_UnitTest.cpp  GltfImporter.cpp  GltfImporter.h  JobManager.cpp  JobManager.h  JsonUtil.cpp  JsonUtil.h  Lighting.cpp  Lighting.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Physics.cpp  Physics.h  PointLight.cpp  PointLight.h  PrimitiveMesh.cpp  (+24 more)
GameFirst/Engine/Editor/: EditorLayer.cpp  EditorLayer.h  GizmoRenderer.cpp  GizmoRenderer.h
GameFirst/Engine/UI/: Font.cpp  Font.h  UICanvas.cpp  UICanvas.h  UIPanel.cpp  UIPanel.h  UIRenderer.cpp  UIRenderer.h  UIText.cpp  UIText.h  UIWidget.cpp  UIWidget.h
GameFirst/Game/: CMakeLists.txt  Game.cpp  Game.h  SimpleRotate.cpp  SimpleRotate.h  main.cpp  pch.h
GameFirst/Game/Components/: FPSCamera.cpp  FPSCamera.h  FollowCam.cpp  FollowCam.h  Player.cpp  Player.h  TargetMover.cpp  TargetMover.h
GameFirst/Shaders/: BasicMesh.hlsl  BloomMask.hlsl  Blur.hlsl  Constants.hlsl  Copy.hlsl  Crosshair.hlsl  GizmoLine.hlsl  Lighting.hlsl  Mesh.hlsl  Normal.hlsl  Phong.hlsl  SceneLightContrib.hlsl  SceneLit_Skinned.hlsl  SceneVertexColor.hlsl  SceneWire.hlsl  SceneWireOverlay.hlsl  SceneWire_Skinned.hlsl  SceneWire_Terrain.hlsl  Simple.hlsl  Skinned.hlsl  Terrain.hlsl  UI.hlsl  Unlit.hlsl
GameFirst/UnitTest/: CMakeLists.txt  UnitTest.cpp
cmake/: SetCompileFlags.cmake
